feat[font/backend]: adding pagination for the public feed